--- a/layout/index.html
+++ b/layout/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <!-- //Intro1 -->
 
-                 <!-- Intro1 -->
+                 <!-- Intro2 -->
                  <div class="bs-docs-section">
                     <h2 id="intro1" class="page-header">레이아웃 기본2</h2>
                     <div class="row">
@@ -103,7 +103,50 @@
                     </div>
                     <p>코드 보기 <a href="layout02.html">View</a></p>
                 </div>
-                <!-- //Intro1 -->
+                <!-- //Intro2 -->
+
+                 <!-- Intro3 -->
+                 <div class="bs-docs-section">
+                    <h2 id="intro1" class="page-header">레이아웃 기본3</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout03.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout03.html">View</a></p>
+                </div>
+                <!-- //Intro3 -->
+
+                 <!-- Intro4 -->
+                 <div class="bs-docs-section">
+                    <h2 id="intro1" class="page-header">레이아웃 기본4</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout04.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout04.html">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+
+                <!-- Intro4 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro1" class="page-header">레이아웃 기본5</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout05.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout05.html">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+
             </div>
             <!-- //col-md-9 -->
             <!-- //col-md-3 -->
@@ -112,6 +155,9 @@
                     <ul class="nav bs-sidenav">
                         <li><a href="#intro1">레이아웃1</a></li>
                         <li><a href="#intro2">레이아웃2</a></li>
+                        <li><a href="#intro3">레이아웃3</a></li>
+                        <li><a href="#intro4">레이아웃4</a></li>
+                        <li><a href="#intro5">레이아웃5</a></li>
                     </ul>
                 </div>
             </div>
