--- a/layout/index.html
+++ b/layout/index.html
@@ -71,7 +71,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://webstoryboy.co.kr" target="_blank">webstoryboy.co.kr</a></p>
+            <p><a href="low1ife.github.io/" target="_blank">low1ife.github.io</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
