--- a/layout/index.html
+++ b/layout/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="webstoryboy">
+    <meta name="author" content="wooseok ">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
-    <meta name="keywords" content="웹스토리보이, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design, Webstoryboy">
-    <title>김우석 | wooseok | LAYOUT</title>
+    <meta name="keywords"
+        content="wooseok, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, , publisher, css3, html, markup, design, ">
+    <title>wooseok </title>
     <!-- Bootstrap core CSS -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/docs.min.css" rel="stylesheet">
@@ -22,15 +24,15 @@
     <link rel="icon" href="../assets/ico/favicon_114.png" sizes="128x128">
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="웹스토리보이" />
-    <meta property="og:url" content="https://webstoryboy.co.kr/" />
+    <meta property="og:title" content="wooseok" />
+    <meta property="og:url" content="https://low1ife.github.io/dothome2021" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
-    <meta property="og:site_name" content="웹스토리보이" />
+    <meta property="og:site_name" content="wooseok" />
     <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
     <!-- twitter meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@webstoryboy" />
-    <meta name="twitter:title" content="웹스토리보이" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="웹과 관련된 정보를 제공합니다." />
     <meta property="twitter:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
     <!-- 웹 폰트 -->
@@ -45,6 +47,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body>
     <a class="sr-only" href="#content">Skip to main content</a>
     <header class="navbar navbar-inverse navbar-static-top bs-docs-nav" role="banner">
@@ -61,8 +64,8 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
                     <li><a href="https://wooseok98.tistory.com/">Tistory</a></li>
-                    <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
-                    <li><a href="https://github.com/webstoryboy/dothome1">Github</a></li>
+                    <li><a href="https://codepen.io/cherin0115">Codepen</a></li>
+                    <li><a href="https://low1ife.github.io/dothome2021">Github</a></li>
                     <li><a href="https://www.figma.com/@874463">Figma</a></li>
                 </ul>
             </nav>
@@ -71,7 +74,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
-            <p><a href="low1ife.github.io/" target="_blank">low1ife.github.io</a></p>
+            <p><a href="https://low1ife.github.io/dothome2021" target="_blank">low1ife.github.io</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
@@ -91,9 +94,9 @@
                 </div>
                 <!-- //Intro1 -->
 
-                 <!-- Intro2 -->
-                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">레이아웃 기본2</h2>
+                <!-- Intro2 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">레이아웃 기본2</h2>
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
@@ -104,51 +107,51 @@
                     <p>코드 보기 <a href="layout02.html">View</a></p>
                 </div>
                 <!-- //Intro2 -->
-
-                 <!-- Intro3 -->
-                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">레이아웃 기본3</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/layout03.png" alt="레이아웃">
-                            </a>
-                        </div>
+                
+               <!-- Intro3 -->
+               <div class="bs-docs-section">
+                <h2 id="intro3" class="page-header">레이아웃 기본3</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout03.png" alt="레이아웃">
+                        </a>
                     </div>
-                    <p>코드 보기 <a href="layout03.html">View</a></p>
                 </div>
-                <!-- //Intro3 -->
-
-                 <!-- Intro4 -->
-                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">레이아웃 기본4</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/layout04.png" alt="레이아웃">
-                            </a>
-                        </div>
-                    </div>
-                    <p>코드 보기 <a href="layout04.html">View</a></p>
-                </div>
-                <!-- //Intro4 -->
-
-                <!-- Intro5 -->
-                <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">레이아웃 기본5</h2>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#" class="thumbnail">
-                                <img src="img/layout05.png" alt="레이아웃">
-                            </a>
-                        </div>
-                    </div>
-                    <p>코드 보기 <a href="layout05.html">View</a></p>
-                </div>
-                <!-- //Intro5 -->
-
+                <p>코드 보기 <a href="layout03.html">View</a></p>
             </div>
+            <!-- //Intro3 -->
+
+            <!-- Intro4 -->
+            <div class="bs-docs-section">
+            <h2 id="intro4" class="page-header">레이아웃 기본4</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="#" class="thumbnail">
+                        <img src="img/layout04.png" alt="레이아웃">
+                    </a>
+                </div>
+            </div>
+            <p>코드 보기 <a href="layout04.html">View</a></p>
+        </div>
+        <!-- //Intro4 -->    
+         <!-- Intro5 -->
+         <div class="bs-docs-section">
+            <h2 id="intro5" class="page-header">레이아웃 기본5</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="#" class="thumbnail">
+                        <img src="img/layout05.png" alt="레이아웃">
+                    </a>
+                </div>
+            </div>
+            <p>코드 보기 <a href="layout05.html">View</a></p>
+        </div>
+        <!-- //Intro5 -->    
+            </div>
+            
             <!-- //col-md-9 -->
+
             <!-- //col-md-3 -->
             <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
@@ -172,7 +175,7 @@
             <ul class="footer-links muted">
                 <li>Currently v2.0</li>
                 <li>&middot;</li>
-                <li><a href="https://webstoryboy.github.io/w9/html/">webstoryboy</a></li>
+                <li><a href="https://Low1ife.github.io/dothome21/html/">Wooseok</a></li>
                 <li>&middot;</li>
                 <li><a href="http://cafe.naver.com/crossbrowsing" target="_blank">publisher cafe</a></li>
                 <li>&middot;</li>
@@ -187,4 +190,5 @@
     <script src="../assets/js/docs.min.js"></script>
     <script src="../assets/js/prism.js"></script>
 </body>
+
 </html>
