--- a/layout/layout06.html
+++ b/layout/layout06.html
@@ -6,95 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃 연습6</title>
     <style>
-        @font-face {
-            font-family: 'TmonMonsori';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
         *{
             margin: 0;
             padding: 0;
         }
-        #wrap{
-            width: 100%;
-            background-color: #ede7f6;
-            font-family: 'TmonMonsori';
-            color: #fff;
-            font-size: 60px;
-            text-transform: uppercase;
-            text-align: center;
-        }
         #header{
-            width: 100%;
             height: 110px;
-            line-height: 100px;
-            background-color: #bbdefb ;
+            background-color: #f8bbd0 ;
         }
         #banner{
-            width: 100%;
             height: 750px;
-            line-height: 750px;
-            background-color: #90caf9 ;
+            background-color: #f48fb1 ;
         }
-        #content1{
-            width: 100%;
-            height: 2280px;
-            line-height: 2280px;
-            background-color: #64b5f6 ;
-        }
-        #content2{
-            width: 100%;
-            height: 1570px;
-            line-height: 1570px;
-            background-color: #42a5f5 ;
-        }
-        #content3{
-            width: 100%;
-            height: 530px;
-            line-height: 530px;
-            background-color: #2196f3 ;
+        #contents{
+            height: 5000px;
+            background-color: #d81b60 ;
         }
         #footer{
-            width: 100%;
             height: 270px;
-            line-height: 270px;
-            background-color: #1e88e5 ;
+            background-color: #d81b60;  
         }
-        #header-inner{
-            width: 1200px;
-            height: 110px;
-            background-color: #e1bee7;
-            margin: 0 auto;
-        }
-        #banner-inner{
-            width: 1200px;
-            height: 750px;
-            background-color: #ce93d8 ;
-            margin: 0 auto;
-        }
-        #content1-inner{
+        .content1{
             width: 1200px;
             height: 2280px;
-            background-color: #ba68c8 ;
             margin: 0 auto;
         }
-        #content2-inner{
+        .content2{
             width: 1200px;
-            height: 1570px;
-            background-color: #ab47bc ;
+            height: 1570px; 
             margin: 0 auto;
         }
-        #content3-inner{
+        .content3{
             width: 1200px;
             height: 530px;
-            background-color: #9c27b0 ;
             margin: 0 auto;
         }
-        #footer-inner{
+        .container{
             width: 1200px;
-            height: 270px;
-            background-color: #8e24aa ;
+            height: inherit;
+            background-color: rgba(0, 0, 0, 0.5);
             margin: 0 auto;
         }
     </style>
@@ -102,23 +52,32 @@
 <body>
     <div id="wrap">
         <div id="header">
-            <div id ="header-inner">header</div>
+            <div class="container"></div>
         </div>
+        <!--//header-->
+
         <div id="banner">
-            <div id ="banner-inner">banner</div>
+            <div class="container"></div>
         </div>
-        <div id="content1">
-            <div id="content1-inner">content1</div>
+        <!--//banner-->
+
+        <div id="contents">
+            <div class="content1">
+                <div class="container"></div>
+            </div>
+            <div class="content2">
+                <div class="container"></div>
+            </div>
+            <div class="content3">
+                <div class="container"></div>
+            </div>
         </div>
-        <div id="content2">
-            <div id="content2-inner">content2</div>
-        </div>
-        <div id="content3">
-            <div id="content3-inner">content3</div>
-        </div>
+        <!--//contents-->
+
         <div id="footer">
-            <div id="footer-inner">footer</div>
+            <div class="container"></div>
         </div>
+        <!--//footer-->
     </div>
 </body>
 </html>
