--- a/layout/index.html
+++ b/layout/index.html
@@ -163,6 +163,19 @@
         </div>
         <!-- //Intro6 -->
         
+        <!-- Intro7 -->
+        <div class="bs-docs-section">
+            <h2 id="intro6" class="page-header">레이아웃 기본7</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="#" class="thumbnail">
+                        <img src="img/layout07.jpg" alt="레이아웃">
+                    </a>
+                </div>
+            </div>
+            <p>코드 보기 <a href="layout07.html">View</a></p>
+        </div>
+        <!-- //Intro7 -->
         
             </div>
             
