--- a/layout/index.html
+++ b/layout/index.html
@@ -176,6 +176,48 @@
             <p>코드 보기 <a href="layout07.html">View</a></p>
         </div>
         <!-- //Intro7 -->
+
+         <!-- Intro8 -->
+         <div class="bs-docs-section">
+            <h2 id="intro8" class="page-header">레이아웃 기본8</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="#" class="thumbnail">
+                        <img src="img/layout08.jpg" alt="레이아웃">
+                    </a>
+                </div>
+            </div>
+            <p>코드 보기 <a href="layout08.html">View</a></p>
+        </div>
+        <!-- //Intro8 -->
+
+         <!-- Intro9 -->
+         <div class="bs-docs-section">
+            <h2 id="intro9" class="page-header">레이아웃 기본9</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="#" class="thumbnail">
+                        <img src="img/layout09.jpg" alt="레이아웃">
+                    </a>
+                </div>
+            </div>
+            <p>코드 보기 <a href="layout09.html">View</a></p>
+        </div>
+        <!-- //Intro9 -->
+
+         <!-- Intro10 -->
+         <div class="bs-docs-section">
+            <h2 id="intro10" class="page-header">레이아웃 기본10</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="#" class="thumbnail">
+                        <img src="img/layout10.jpg" alt="레이아웃">
+                    </a>
+                </div>
+            </div>
+            <p>코드 보기 <a href="layout10.html">View</a></p>
+        </div>
+        <!-- //Intro10 -->
         
             </div>
             
