--- a/layout/index.html
+++ b/layout/index.html
@@ -234,6 +234,9 @@
                         <li><a href="#intro5">레이아웃5</a></li>
                         <li><a href="#intro6">레이아웃6</a></li>
                         <li><a href="#intro7">레이아웃7</a></li>
+                        <li><a href="#intro7">레이아웃8</a></li>
+                        <li><a href="#intro7">레이아웃9</a></li>
+                        <li><a href="#intro7">레이아웃10</a></li>
                     </ul>
                 </div>
             </div>
