--- a/layout/layouttest13.html
+++ b/layout/layouttest13.html
@@ -51,6 +51,9 @@
             background-color: #43a047;
         }
         @media(max-width : 1200px){
+            #wrap{
+                width: 100%;
+            }
             article{
                 width: 100%;
                 height: 300px;
