--- a/site/css/style.css
+++ b/site/css/style.css
@@ -6,27 +6,79 @@
     1. 가운데 영역
     2. 레이아웃 float ( 구익스 호환성 )
 */
-
-#header {
+#header{
     width: 100%;
-    height: 100px;
+    height: 70px;
+    line-height: 70px;
     border-bottom: 1px solid #eee;
 }
-.header {
-    background: red;
+
+/*.header-one {
+    text-align: center;
+}
+ 
+.header-One {
     overflow: hidden;
 }
-.header h1 {
-    padding: 30px 0;
+.header-One h1 {
+    font-family: var(--fontNexon1B);
     float: left;
 }
-.header .menu {
+.header-One .menu {
+    font-family: var(--fontNexon1M);
     float: right;
 }
-.header .menu li {
+.header-One .menu li {
     display: inline;
 }
-.header .menu li a {
-    padding: 40px 16px;
+.header-One .menu li a {
+    padding: 0 16px;
     display: inline-block;
+}
+.header-One .menu li:last-child {
+    padding-right: 0;
+} */
+
+.header-three {
+    text-align: center;
+    font-family: var(--fontNexon1M);
+}
+.header-three h1 {
+    position :absolute;
+    left: 2%;
+    top: 0;
+}
+.header-three h1 a {
+    line-height: 40px;
+}
+.header-three .menu li {
+    display: inline;
+}
+.header-three .menu li a {
+    padding: 0 16px;
+}
+.header-three .member{
+    position: absolute;
+    right: 2%;
+    top:0;
+}
+.header-three .member a {
+    line-height: 100px;
+    border: 1px solid #000;
+    padding: 7px 37px;
+    border-radius: 30px;
+    margin-left: 10px;
+}
+ /* 다크모드 */
+.dark #header {
+    background-color: #2e2e2e;
+}
+.dark #header h1 a{
+    color : #fff;
+}
+.dark .menu li a {
+    color : #fff;
+}
+.dark .member a {
+    color : #fff;
 }
