--- a/site/css/common.css
+++ b/site/css/common.css
@@ -1,12 +1,12 @@
-/* container 
+ 
 .container {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
+    position: relative;
 }
-*/
+
 .container-fluid {
-    max-width: 1200px;
     width: 96%;
     margin: 0 auto;
 }
