--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -1,12 +1,17 @@
 /* 카드 타입 유형 */
 
+body {
+    background-color: #f3f3f3;
+}
+.cardType{
+    margin: 150px 0;
+    background-color: #fff;
+    box-shadow: 0 0 50px rgba(0,0,0,0.1);
+}
 /* cardType01 */
-
-#cardType{}
-
 .cardType01 {
     font-family: 'GmarketSans';
-    padding: 60px 0;
+    padding: 100px 0;
 }
 .cardType01 h2 {
     font-weight: 500;
@@ -19,21 +24,8 @@
     line-height: 1.28;
     margin-bottom: 40px;
 }
-.cardType02 {
-    font-family: 'S-CoreDream';
-    padding: 60px 0;
-}
-.cardType02 h2 {
-    font-weight: 500;
-    font-size: 60px;
-    margin-bottom: 7px;
-}
-.cardType02 p {
-    font-weight: 200;
-    font-size: 26px;
-    line-height: 1.28;
-    margin-bottom: 40px;
-}
+/* cardType02 */
+
 /* float을 이용한 레이아웃 
 .card-wrap {
     overflow: hidden;
@@ -48,30 +40,22 @@
 } */
 
 /* flex 를 이용한 레이아웃 */
-.card-wrap {
+.cardType01 .card-wrap {
     display: flex;
     justify-content: space-between;
 }
-.card-wrap > div {
+.cardType01 .card-wrap > div {
     width: 387px;
 }
-.card-wrap02 {
-    display: flex;
-    justify-content: space-between;
-}
-.card-wrap02 > div {
-    width: 255px;
-}
-.card {}
-.card .card-img{}
-.card .card-title{
+
+.cardType01 .card .card-title{
     display: block;
     font-size: 32px;
     white-space: nowrap;       /* 한줄 효과 */
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.card .card-desc{
+.cardType01 .card .card-desc{
     display: block;
     font-size: 20px;
     font-weight: 300;
@@ -82,42 +66,24 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;  
 }
-.card .card-keyword{
+.cardType01 .card .card-keyword{
     font-size: 16px;
     font-weight: 300;
     opacity: 0.5;
 }
-.card02 {
-    border : 1px solid #e6e6e6;
-    padding: 20px;
-    border-radius: 5px;
+
+/* cardType02 */
+
+.cardType02 {
+    padding: 150px 0;
+    font-family: 'GmarketSans';
+    text-align: center;
 }
-.card02 .card-title{
-    display: block;
-    font-size: 25px;
-    white-space: nowrap;       /* 한줄 효과 */
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin-bottom: 10px;
+.cardType02 h2 {
+    font-size: 50px;
+    font-weight: 500;
 }
-.card02 .card-desc{
-    display: block;
-    font-size: 15px;
+.cardType02 p {
+    font-size: 26px;
     font-weight: 300;
-    overflow: hidden;
-    /* 벤더 프리픽스 */
-    /* 두줄 효과 */
-    display : -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    margin-bottom: 20px;
-}       
-.card02 .card-keyword{
-    font-size: 16px;
-    font-weight: 300;
-    color : #fff;
-    border: 1px solid #000;
-    background-color: #000;
-    border-radius: 50px;
-    padding: 3px 25px;
 }
