--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -215,8 +215,54 @@ body {
     color: #fff;
     background-color: #ff5151;
 }
+.cardType03 .card03 .card-word2 {
+    margin-left: 20px;
+    position: absolute;
+    border: 1px solid #000;
+    border-radius: 50px;
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #5465ff;
+}
+.cardType03 .card03 .card-word3 {
+    margin-left: 20px;
+    position: absolute;
+    border: 1px solid #000;
+    border-radius: 50px;
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #ff5151;
+}
+.cardType03 .card03 .card-word4 {
+    margin-left: 20px;
+    position: absolute;
+    border: 1px solid #000;
+    border-radius: 50px;
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #11c865;
+}
 .cardType03 .card03 .card-img {
     border-radius: 10px;
     display: inline;
     margin-bottom: 20px;
+    width: 285px;
 }
+
+.cardType03 .cd1 {
+   float: right;
+   margin-right: 15px;
+}
+.cardType03 .cd2 {
+    float: right;
+    margin-right: 15px;
+ }
+ .cardType03 .card03 .card-date {
+    position: absolute;
+    padding: 210px 210px 210px 20px;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 1.4;
+    color: #555;
+    text-decoration: underline;
+ }
