--- a/site/css/reset.css
+++ b/site/css/reset.css
@@ -1,7 +1,6 @@
-@charset "UTF-8"
+@charset "utf-8";
 
-/*여백 초기화*/
-
+/* 여백 초기화 */
 body,
 div,
 dl,
@@ -34,34 +33,37 @@ button {
 }
 
 /* 폰트 초기화 */
-
 body,
 button,
 input,
 select,
 table,
-textarea {
-    font-size: 14px;
-    line-height: 1.5;
-    color: #222;
-    font-family:var(--fontNexon1M) AppleSDGothicNeo-Regular, 'Malgun Gothic', '맑은 고딕', dotum, '돋움', sans-serif;
+textarea{
+    font-size:14px;
+    line-height:1.5;
+    color:#222;
+    font-family:var(--fontNexon1M), AppleSDGothicNeo-Regular,'Malgun Gothic','맑은 고딕',dotum,'돋움',sans-serif;
 }
 
-/* 링크 초기화 */
+/* a 링크 초기화 */
 a {
-    color: inherit;
-    text-decoration: none
+    color: #222;
+    text-decoration: none;
 }
 
 /* 목록 초기화 */
 ol,
 ul {
-    list-style: none
+    list-style: none;
 }
+
 /* 스타일 초기화 */
 strong {
     font-weight: normal;
 }
 em {
-    font-style: normal;
+    font-weight: normal;
+}
+img {
+    width: 100%;
 }
