--- a/site/css/fonts.css
+++ b/site/css/fonts.css
@@ -93,7 +93,7 @@
     font-style: normal;
 }
 @font-face {
-    font-family: 'NEXON Lv1 Gothic OTF Bold';
+    font-family: 'NEXON Lv1 Gothic OTF';
     font-weight: 700;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Bold.woff') format('woff');
     font-style: normal;
