--- a/site/css/imageType.css
+++ b/site/css/imageType.css
@@ -58,6 +58,8 @@ body {
     color: #fff;
 }
 
+/* imgType02 */
+
 .imgType02 {
     font-family: 'NEXON Lv1 Gothic OTF';
     padding: 200px 0;
@@ -122,4 +124,168 @@ body {
     padding: 5px 15px 5px;
     color: #fff;
     background-color:  rgba(0, 0, 0, 0.7);
+}
+
+
+.imgType03 {
+    font-family: 'GmarketSans';
+    padding: 100px 0;
+    line-height: 1.4;
+}
+.imgType03 h2 {
+    font-size: 50px;
+    font-weight: 500;
+    margin-bottom: 40px;
+}
+.imgType03 .img-wrap {
+    display: inline-block;
+    justify-content: space-between;
+    text-align: center;
+}
+.imgType03 .img-wrap .img {
+    position: relative;
+}
+.imgType03 .img-wrap .img .img-box {
+    position: absolute;
+    width: 480px;
+    height: 180px;
+    bottom: 0;
+    margin: 30px;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #fff;
+}
+.imgType03 .img-wrap .img .img-box .img-title {
+    display: block;
+    white-space: nowrap;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    text-align: left;
+}
+.imgType03 .img-wrap .img .img-box .img-desc {
+    display: block;
+    font-size: 17px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    white-space: nowrap;       /* 한줄 효과 */
+    overflow: hidden;
+    text-align: left;
+}
+.imgType03 .img-wrap .img .img-box .img-keyword a{
+    display: block;
+    text-align: left;
+    font-size: 17px;
+    font-weight: 500;
+    color: #fff;
+}
+
+
+.imgType03 .img-wrap .img2 .img-box2 {
+    position: absolute;
+    width: 264px;
+    height: 30px;
+    bottom: 0;
+    margin: 25px 5px 30px 0;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #fff;
+}
+.imgType03 .img-wrap .img2 {
+    position: absolute;
+    margin: 30px;
+    right: 275px;
+    top: 180px;
+}
+
+.imgType03 .img-wrap .img2 .img-box2 .img-title {
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    white-space: nowrap;
+    text-align: center;
+    color: #fff;
+}
+
+.imgType03 .img-wrap .img3 .img-box3 {
+    position: absolute;
+    width: 264px;
+    height: 30px;
+    bottom: 0;
+    margin: 25px 5px 30px 0;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    text-align: center;
+    color: #fff;
+}
+.imgType03 .img-wrap .img3 {
+    position: absolute;
+    margin: 30px;
+    right: -2.5%;
+    top: 180px;
+}
+
+.imgType03 .img-wrap .img3 .img-box3 .img-title {
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    white-space: nowrap;
+    text-align: center;
+    color: #fff;
+}
+
+.imgType03 .img-wrap .img4 .img-box4 {
+    position: absolute;
+    width: 264px;
+    height: 30px;
+    bottom: 0;
+    margin: 25px 5px 30px 0;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    text-align: center;
+    color: #fff;
+}
+.imgType03 .img-wrap .img4 {
+    position: absolute;
+    margin: 30px;
+    right: 23%;
+    top: 498px;
+}
+
+.imgType03 .img-wrap .img4 .img-box4 .img-title {
+    display: block;
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    white-space: nowrap;
+    text-align: center;
+    color: #fff;
+}
+
+.imgType03 .img-wrap .img5 .img-box5 {
+    position: absolute;
+    width: 264px;
+    height: 29px;
+    bottom: 0;
+    margin: 25px 5px 30px 0;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    text-align: center;
+    color: #fff;
+}
+.imgType03 .img-wrap .img5 {
+    position: absolute;
+    margin: 30px;
+    right: -2.5%;
+    top: 498px;
+}
+
+.imgType03 .img-wrap .img5 .img-box5 .img-title {
+    display: block;
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    white-space: nowrap;
+    text-align: center;
+    color: #fff;
 }
