--- a/site/css/imageType.css
+++ b/site/css/imageType.css
@@ -1,291 +1,90 @@
+/* imageType */
+
 body {
     background-color: #f3f3f3;
 }
-.imgType {
+.imageType{
     margin: 100px 0;
     background-color: #fff;
     box-shadow: 0 0 50px rgba(0,0,0,0.1);
 }
-/* imgType01 */
 
-.imgType01 {
-    font-family: 'NEXON Lv1 Gothic OTF';
-    padding: 100px 0;
-    line-height: 1.4;
-}
-.imgType01 h2 {
-    font-size: 50px;
-    font-weight: 700;
-    margin-bottom: 40px;
-}
-.imgType01 .img-wrap {
-    display: flex;
-    justify-content: space-between;
-}
-.imgType01 .img-wrap .img {
-    position: relative;
-}
-.imgType01 .img-wrap .img .img-box {
-    position: absolute;
-    width: 310px;
-    height: 120px;
-    bottom: 0;
-    margin: 30px;
-    padding: 15px;
-    background-color: rgba(0, 0, 0, 0.4);
-    color: #fff;
-}
-.imgType01 .img-wrap .img .img-box .img-title {
-    display: block;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-.imgType01 .img-wrap .img .img-box .img-desc {
-    display: block;
-    font-size: 12px;
-    font-weight: 300;
-    margin-bottom: 15px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-}
-.imgType01 .img-wrap .img .img-box .img-keyword a {
-    display: block;
-    font-size: 14px;
-    font-weight: 500;
-    color: #fff;
-}
-
-/* imgType02 */
-
-.imgType02 {
-    font-family: 'NEXON Lv1 Gothic OTF';
-    padding: 200px 0;
-    line-height: 1.4;
-}
-.imgType02 h2 {
-    font-size: 50px;
-    font-weight: 700;
-    margin-bottom: 40px;
-}
-.imgType02 .img-wrap {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-.imgType02 .img-wrap .img {
-    position: relative;
-}
-.imgType02 .img-wrap .img .img-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fff;
-}
-.imgType02 .img-wrap .img .img-box .img-title {
-    display: block;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 10px;
-    padding: 4px 17px 3px;
-}
-.imgType02 .img-wrap .img .img-box .img-title1 {
-    display: block;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 10px;
-    padding: 4px 17px 3px;
-}
-.imgType02 .img-wrap .img .img-box .img-title2{
-    display: block;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 10px;
-    margin-top: 35px;
-    padding: 4px 17px 3px;
-}
-.imgType02 .img-wrap .img .img-box .img-title3 {
-    display: block;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 10px;
-    padding: 4px 17px 3px;
-}
-.imgType02 .img-wrap .img .img-box .img-keyword a{
-    display: inline-block;
-    top: -50%;
-    border-radius: 15px;
-    font-size: 14px;
-    font-weight: 500;
-    padding: 5px 15px 5px;
-    color: #fff;
-    background-color:  rgba(0, 0, 0, 0.7);
-}
-
-
-.imgType03 {
+/* imageType01 */
+.imageType01 {
     font-family: 'GmarketSans';
     padding: 100px 0;
-    line-height: 1.4;
 }
-.imgType03 h2 {
+
+.imageType01 h2 {
     font-size: 50px;
-    font-weight: 500;
-    margin-bottom: 40px;
+    font-weight: 700;
+    margin-bottom: 35px;
 }
-.imgType03 .img-wrap {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-.imgType03 .img-wrap .img {
-    position: relative;
-}
-.imgType03 .img-wrap .img .img-box {
-    position: absolute;
-    width: 480px;
-    height: 180px;
-    bottom: 0;
-    margin: 30px;
-    padding: 15px;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: #fff;
-}
-.imgType03 .img-wrap .img .img-box .img-title {
-    display: block;
-    white-space: nowrap;
-    font-size: 40px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    text-align: left;
-}
-.imgType03 .img-wrap .img .img-box .img-desc {
-    display: block;
-    font-size: 17px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    white-space: nowrap;       /* 한줄 효과 */
+
+.imageType01 .image-wrap {
     overflow: hidden;
-    text-align: left;
 }
-.imgType03 .img-wrap .img .img-box .img-keyword a{
-    display: block;
-    text-align: left;
-    font-size: 17px;
+
+.imageType01 .image{
+    position: relative;
+    float: left;
+    width: 590px;
+    height: 385px;
+}
+
+.imageType01 .image:first-child {
+    margin-right: 20px;
+}
+
+.imageType01 .image .image-cont{
+    position: absolute;
+    left: 30px;
+    bottom: 30px;
+    color : #fff;
+}
+
+.imageType01 .image .image-title{
+    font-size: 35px;
     font-weight: 500;
-    color: #fff;
+    margin-bottom: 4px;
 }
 
-
-.imgType03 .img-wrap .img2 .img-box2 {
-    position: absolute;
-    width: 264px;
-    height: 30px;
-    bottom: 0;
-    margin: 25px 5px 30px 0;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.3);
-    color: #fff;
-}
-.imgType03 .img-wrap .img2 {
-    position: absolute;
-    margin: 30px;
-    right: 275px;
-    top: 180px;
+.imageType01 .image .image-desc{
+    font-size: 15px;
+    font-weight: 300;
+    padding-right: 30%;
+    line-height: 1.4;
+    word-break: keep-all;
 }
 
-.imgType03 .img-wrap .img2 .img-box2 .img-title {
-    font-size: 22px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    white-space: nowrap;
-    text-align: center;
-    color: #fff;
+.imageType01 .image .image-btn{
+    font-size: 14px;
+    padding: 8px 18px;
+    /*background-color: #777; */
+    display: inline-block;
+    color : #fff;
+    margin-top: 10px;
 }
 
-.imgType03 .img-wrap .img3 .img-box3 {
-    position: absolute;
-    width: 264px;
-    height: 30px;
-    bottom: 0;
-    margin: 25px 5px 30px 0;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.3);
-    text-align: center;
-    color: #fff;
-}
-.imgType03 .img-wrap .img3 {
-    position: absolute;
-    margin: 30px;
-    right: -2.5%;
-    top: 180px;
+.imageType01 .image .image-btn.red {
+    background-color: #5c5959b6;
 }
 
-.imgType03 .img-wrap .img3 .img-box3 .img-title {
-    font-size: 22px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    white-space: nowrap;
-    text-align: center;
-    color: #fff;
+.imageType01 .image .image-btn.yellow {
+   /* background-color: #5c5959b6; */
 }
 
-.imgType03 .img-wrap .img4 .img-box4 {
-    position: absolute;
-    width: 264px;
-    height: 30px;
-    bottom: 0;
-    margin: 25px 5px 30px 0;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.3);
-    text-align: center;
-    color: #fff;
-}
-.imgType03 .img-wrap .img4 {
-    position: absolute;
-    margin: 30px;
-    right: 23%;
-    top: 498px;
+.imageType01 .image .image-cont.s2 {
+    background: #68666680;
+    width: 400px;
+    padding: 15px;
 }
 
-.imgType03 .img-wrap .img4 .img-box4 .img-title {
-    display: block;
-    font-size: 22px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    white-space: nowrap;
-    text-align: center;
-    color: #fff;
+.imageType01 .image .image-cont.s2 .image-desc {
+    padding-right: 0;
 }
 
-.imgType03 .img-wrap .img5 .img-box5 {
-    position: absolute;
-    width: 264px;
-    height: 29px;
-    bottom: 0;
-    margin: 25px 5px 30px 0;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.3);
-    text-align: center;
-    color: #fff;
-}
-.imgType03 .img-wrap .img5 {
-    position: absolute;
-    margin: 30px;
-    right: -2.5%;
-    top: 498px;
-}
-
-.imgType03 .img-wrap .img5 .img-box5 .img-title {
-    display: block;
-    font-size: 22px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    white-space: nowrap;
-    text-align: center;
-    color: #fff;
+.imageType01 .image .image-cont.s2 .image-btn {
+    padding: 0;
+    border-bottom : 1px solid #fff;
 }
