--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -199,6 +199,48 @@ body {
     text-decoration: underline;
     margin-top: 20px;
 }
-em {
-    font-style: normal;
+
+
+/* cardType04 */
+
+.cardType04 {
+    padding: 100px 0;
+    font-family: 'S-CoreDream';
+    position: relative;
+}
+.cardType04 .card-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+.cardType04 h2 {
+    font-size: 50px;
+    font-weight: 600;
+    margin-bottom: 40px;
+    text-align: center;
+}
+.cardType04 .card-box {
+    background-color: #f2f2f2;
+    width: 400px;
+    height: 600px;
+    border-radius: 15px;
+    padding-left: 45px;
+    margin: 20px;
+}
+.cardType04 .card-box em{
+    position: absolute;
+    color: #a9a9a9;
+    font-weight: 800;
+    margin-top: 60px;
+}
+.cardType04 .card-box h3{
+    position: absolute;
+    font-size: 23px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin-top: 100px;
+}
+.cardType04 .card-box img{
+    position: absolute;
+    width: 315px;
+    margin-top: 220px;
 }
