--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -24,8 +24,9 @@ body {
 }
 
 h1 {
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 20px;
+    font-size: 60px;
 }
 h1 a {
     font-family: 'TmonMonsori'
