--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -102,12 +102,35 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
     justify-content: center;
 }
 
-//bg1
-.bg1 {
+@mixin content {
+    content : '';
+    left: 0;
+    top: 0;
+    position: absolute;
+}
+
+
+//bg
+.bg {
     height: 100vh;
-    background-image: url(../img/bg06@2.jpg);
+    position: relative;
     background-size: cover;
     background-position: center center;
+    background-repeat: no-repeat;
+
+    &::before {
+        @include content;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.7);
+        z-index: -1;
+    }
+}
+
+@for $i from 10 through 20 {
+    .bg#{$i} {
+        background-image: url(../img/bg#{$i}@2.jpg);
+    }
 }
 
 #main {
@@ -181,6 +204,82 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
                 color : #6c4a70;
             }
         }
+    }
+}
+
+//info
+.info {
+    color : #fff;
+    font-family: $font-NEXON1;
+    padding: 20px;
+
+
+    &.right {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    &.bottom {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+
+
+    h1 {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 1.6;
+        border-bottom: 1px dashed #fff;
+        display: inline-block;
+        margin-bottom: 10px;
+    }
+    p {
+        font-weight: 400;
+        font-size: 16px;
+    }
+  
+
+    li {
+        list-style: none;
+        display: inline;
+
+
+        a {
+            display: inline-block;
+            text-decoration: none;
+            color : #fff;
+            border : 1px dashed #fff;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            text-align: center;
+            line-height: 20px;
+            font-size: 12px;
+            margin-bottom: 5px;
+        }
+
+        &.active {
+            a {
+                background: #fff;
+                color: #000;
+            }
+        }
+    }
+}
+
+button {
+    background: transparent;
+    border : 1px solid #fff;
+    padding: 5px 10px;
+    color: #fff;
+    border-radius: 50px;
+    box-shadow : 0 0 0 #fff inset;
+    transition : all 0.4s;
+
+    &:hover {
+        box-shadow : 0 -50px 0 #fff inset;
+        color : #000;
     }
 }
 
