--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -111,6 +111,15 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
 }
 
 
+//agent
+.iphone .bg {
+    display: none;
+}
+
+
+
+
+
 //bg
 .bg {
     height: 100vh;
