--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -112,10 +112,12 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
 
 
 //agent
-.iphone .bg {
-    display: none;
+.iphone main {
+    padding: 10px;
 }
-
+.android main {
+    padding: 10px;
+}
 
 
 
