--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -736,12 +736,14 @@ figcaption {
 .source button {
   background: transparent;
   border: 1px solid #fff;
-  padding: 5px 10px;
+  padding: 15px 20px;
   color: #fff;
   border-radius: 50px;
   box-shadow: 0 0 0 #fff inset;
   transition: all 0.4s;
   cursor: pointer;
+  line-height: 15px;
+  font-size: 15px;
 }
 .source button:hover {
   box-shadow: 0 -50px 0 #fff inset;
