--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -686,13 +686,14 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
 .source button {
     background: transparent;
     border: 1px solid #fff;
-    padding: 5px 10px;
+    padding: 15px 20px;
     color: #fff;
     border-radius: 50px;
     box-shadow: 0 0 0 #fff inset;
     transition: all 0.4s;
     cursor: pointer;
-    
+    line-height: 15px;
+    font-size: 15px;
 
     &:hover {
         box-shadow : 0 -50px 0 #fff inset;
